# anova_rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
cli/src/: engine.rs  errors.rs  main.rs
cli/src/commands/: start.rs
src/: app.rs  args.rs  engine.rs  event.rs  main.rs  tmp_send.rs  types.rs  ui.rs
src/anova_engine/: consts.rs  engine.rs  types.rs
src/anova_engine/commands/: mod.rs  set.rs
src/anova_engine/schema/: device.rs
src/api/: from_device.rs  interface.rs  mod.rs  to_device.rs  types.rs
src/commands/: mod.rs  start.rs
src/schema/: device.rs
src/types/: api_request.rs  common.rs  control.rs  device.rs  mod.rs  tab.rs
tui/: Cargo.toml  LICENSE  README.md
tui/src/: anova_engine.tar.xz  app.rs  event.rs  main.rs  ui.rs
tui/src/anova_engine/: consts.rs  engine.rs  mod.rs  types.rs
tui/src/anova_engine/commands/: stop.rs
tui/src/anova_engine/schema/: device.rs
tui/src/types/: device.rs
