[package]
name = "anova_rs"
version = "0.0.1"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
future-utils = "0.12.1"
futures-util = "0.3.32"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simple_logger = "5.2.0"
tabled = "0.20.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
url = "2.5.8"
uuid = {version = "1.23.1", features = ["serde", "v4"]}
validator = {version = "0.20.0", features = ["derive"]}
