[package]
name = "anova-rs"
version = "0.1.0"
description = "TUI for minotoring and controlling ANOVA APC devices"
authors = ["OscarAspelin <oscar.asp@hotmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
# ratatui
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
tokio = { version = "1.52.1", features = ["full"] }
color-eyre = "0.6.3"
strum = { version = "0.28.0", features = ["derive"] }

# anova stuff
dotenv = "0.15.0"
future-utils = "0.12.1"
futures-util = "0.3.32"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simple_logger = "5.2.0"
thiserror = "2.0.18"
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
url = "2.5.8"
uuid = {version = "1.23.1", features = ["serde", "v4"]}
validator = {version = "0.20.0", features = ["derive"]}

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
